# Auto-Car-03-SLAM-00-Algorithms

./: README.md
00-Env-Setup/: README.md
00-Env-Setup/01-single-executable/: .gitignore  CMakeLists.txt  hello-slam.cpp
00-Env-Setup/02-single-executable-with-shared-lib/: .gitignore  CMakeLists.txt  lib-hello-slam.cpp  lib-hello-slam.hpp  main.cpp
02-kinematics-in-3d-space/: README.md
04-camera-calibration/workspace/: CMakeLists.txt
04-camera-calibration/workspace/01-undistort-image/: undistort-image
04-camera-calibration/workspace/02-stereo-vision/: stereo-vision
04-camera-calibration/workspace/03-gaussian-newton-estimation/: gaussian-newton  gaussnewton.cpp
05-visual-odometry-using-feature-points/: 05-特征点法视觉里程计.docx  README.md
05-visual-odometry-using-feature-points/workspace/: CMakeLists.txt
05-visual-odometry-using-feature-points/workspace-submit/: .gitignore
05-visual-odometry-using-feature-points/workspace-submit/03-pnp-using-bundle-adjustment/: GN-BA.cpp
05-visual-odometry-using-feature-points/workspace/01-ORB/: compute-orb  computeORB.cpp
05-visual-odometry-using-feature-points/workspace/02-camera-pose-estimation/: pose-estimation  pose-estimation.cpp
05-visual-odometry-using-feature-points/workspace/03-pnp-using-bundle-adjustment/: GN-BA
05-visual-odometry-using-feature-points/workspace/04-ICP/: trajectory-matching  trajectory-matching.cpp
05-visual-odometry-using-feature-points/workspace/05-pnp-using-g2o/: pnp-using-g2o  pnp-using-g2o.cpp
05-visual-odometry-using-feature-points/workspace/06-ICP-using-g2o/: ICP-using-g2o  ICP-using-g2o.cpp
06-visual-odometry-using-optical-flow/: .~lock.06-光流法与直接法.docx#  README.md
06-visual-odometry-using-optical-flow/workspace/: CMakeLists.txt
06-visual-odometry-using-optical-flow/workspace/01-lukas-kanade/: optical-flow  optical-flow.cpp
06-visual-odometry-using-optical-flow/workspace/02-direct-method/: direct-method  direct-method.cpp  direct_method.cpp
07-backend-optimization/: README.md
07-backend-optimization/workspace/: .gitignore  CMakeLists.txt
07-backend-optimization/workspace/01-BAL-g2o/: main.cpp
07-backend-optimization/workspace/01-BAL-g2o/BALDataset/: BALDataset.cpp  BALDataset.h
07-backend-optimization/workspace/01-BAL-g2o/BALTypes/: BALClass.h
07-backend-optimization/workspace/01-BAL-g2o/jacobian-derivation/: .gitignore  Jacobian-Derivation-for-BAL.ipynb
07-backend-optimization/workspace/01-BAL-g2o/utils/: projection.h  rotation.h
07-backend-optimization/workspace/02-direct-g2o/: directBA.cpp
07-backend-optimization/workspace/02-direct-g2o/jacobian-derivation/: Jacobian-Derivation-for-BAL.ipynb
08-imu/: .gitignore  README.md
08-imu/doc/: bib.bib  main.tex
08-imu/ros/imu_utils/data/: VIOSim_imu_param.yaml  data_VIOSim_acc_x.txt  data_VIOSim_acc_y.txt  data_VIOSim_acc_z.txt  data_VIOSim_gyr_x.txt  data_VIOSim_gyr_y.txt  data_VIOSim_gyr_z.txt  data_VIOSim_sim_acc_x.txt  data_VIOSim_sim_acc_y.txt  data_VIOSim_sim_acc_z.txt  data_VIOSim_sim_gyr_t.txt  data_VIOSim_sim_gyr_x.txt  data_VIOSim_sim_gyr_y.txt  data_VIOSim_sim_gyr_z.txt
08-imu/ros/imu_utils/launch/: sim.launch
08-imu/ros/imu_utils/scripts/: draw_allan.py
08-imu/ros/src/: imu.cpp
08-imu/ros/vio_data_simulation/src/: gener_alldata.cpp  imu.cpp  utilities.cpp
08-imu/standard/: CMakeLists.txt
08-imu/standard/src/: imu.cpp
16-lidar-transform/: basic_transform_study.cpp
17-lidar-slam-motion-calib/direct-method/: CMakeLists.txt  calib.rviz  results
17-lidar-slam-motion-calib/direct-method/src/: Odom_Calib.cpp  main.cpp
17-lidar-slam-motion-calib/model-based/: odom_calib.cpp
